<resources>
    <string name="app_name">Medication Control</string>
    <string name="no_medications">No medications registered</string>
    <string name="add_medication">Add Medication</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="medication_name">Medication Name</string>
    <string name="medication_description">Description</string>
    <string name="consumption_time">Consumption Time</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_medication">Delete Medication</string>
    <string name="confirm_delete">Are you sure you want to delete this medication?</string>
    <string name="medication_added">Medication added successfully</string>
    <string name="medication_updated">Medication updated successfully</string>
    <string name="medication_deleted">Medication deleted successfully</string>
    <string name="error_adding">Error adding medication</string>
    <string name="error_updating">Error updating medication</string>
    <string name="error_deleting">Error deleting medication</string>
    <string name="error_loading">Error loading medications</string>
    <string name="enter_medication_name">Please enter medication name</string>
    <string name="mark_taken">Mark as taken</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string name="time_to_take">Time to take</string>
    <string name="notification_description">Notifications for medication reminders</string>
    <string name="language">Language</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="generic_name">Generic Name</string>
</resources>